--- a/public_html/index.html
+++ b/public_html/index.html
@@ -63,6 +63,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>About</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim consectetur consequatur, maxime porro doloribus numquam esse quisquam quam quo ea officiis consequuntur eligendi similique pariatur a. Deserunt est molestiae distinctio.</p>
                 </div>
             </div>
         </div>
